MFB: Fixed bug #48189 (ibase_execute error in return param)